2011-04-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-process-actions): Add POS argument.  Delete
	region between POS and (pos).
	(tramp-do-copy-or-rename-file-out-of-band): Use `nil' position in
	`tramp-process-actions' call.
	(tramp-maybe-open-connection): Call `tramp-process-actions' with pos.

	* tramp-smb.el (tramp-smb-maybe-open-connection): Use `nil'
	position in `tramp-process-actions' call.

2011-03-12  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.20 released.

	* tramp.el (tramp-progress-reporter-update): Use
	`tramp-compat-funcall'.
	(tramp-handle-start-file-process): Use `tramp-compat-process-get'.
	(tramp-handle-insert-file-contents): Make `file-remote-p' call
	compatible.
	(tramp-open-connection-setup-interactive-shell): Use
	`tramp-compat-process-put'.

	* tramp-compat.el (tramp-compat-process-get)
	(tramp-compat-process-put): New defuns.

2011-02-22  Glenn Morris  <rgm@gnu.org>

	* tramp-gvfs.el: Fix spelling of "precede".

2011-01-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-default-method): Initialize with pscp/plink only
	when running under W32.
	(tramp-find-inline-compress, tramp-get-inline-coding): Quote
	command after pipe symbol for local calls under W32.  (Bug#6784)

2010-12-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): Add recursive options to "scpc",
	"scpx", "pscp" and "psftp".

2010-12-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-action-password, tramp-process-actions): Revert
	patch from 2010-12-08.  Use `save-restriction'.

2010-12-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-start-file-process): Protect
	buffer-modified value.  (Bug#7557)
	(tramp-action-password): Delete region, do not narrow.
	(tramp-process-actions): Do not widen.

2010-11-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-default-method-alist)
	(tramp-default-user-alist, tramp-default-proxies-alist):